# app/system/internal/server/http.go
@@ -1,10 +1,7 @@
 package server
 
 import (
-	v1 "universal/api/helloworld/v1"
-	universalv1 "universal/api/universal/v1"
-	"universal/internal/conf"
-	"universal/internal/service"
+	"universal/app/system/internal/conf"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
@@ -12,7 +9,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, universalService *service.UniversalService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -28,7 +25,5 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, universalSer
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
-	universalv1.RegisterUniversalHTTPServer(srv, universalService)
 	return srv
 }
