# app/system/internal/server/server.go
@@ -1,0 +1,25 @@
+package server
+
+import (
+	"universal/app/system/internal/conf"
+
+	"github.com/go-kratos/kratos/contrib/registry/consul/v2"
+	"github.com/go-kratos/kratos/v2/registry"
+	"github.com/google/wire"
+	"github.com/hashicorp/consul/api"
+)
+
+// ProviderSet is server providers.
+var ProviderSet = wire.NewSet(NewGRPCServer, NewHTTPServer, NewRegistrar)
+
+func NewRegistrar(conf *conf.Registry) registry.Registrar {
+	c := api.DefaultConfig()
+	c.Address = conf.Consul.Address
+	c.Scheme = conf.Consul.Scheme
+	cli, err := api.NewClient(c)
+	if err != nil {
+		panic(err)
+	}
+	r := consul.New(cli, consul.WithHealthCheck(false))
+	return r
+}
